recipe_report 1차